Fix: Slider RTL support, hero layout gap, navigation dropdown styles

--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/social-responsibility.css">
 </head>
 
 <body>
@@ -99,7 +100,46 @@
         </div>
     </section>
 
-    <!-- Certifications -->
+    <!-- Social Responsibility -->
+    <section class="social-responsibility">
+        <div class="container">
+            <div class="section-title">
+                <h2 data-i18n="ourResponsibility">Our Responsibility</h2>
+                <p data-i18n="responsibilityDesc">Committed to the planet, our people, and ethical beauty.</p>
+            </div>
+            <div class="responsibility-grid">
+                <!-- Card 1 -->
+                <div class="resp-card">
+                    <div class="resp-icon">
+                        <i class="fas fa-leaf"></i>
+                    </div>
+                    <h3 data-i18n="sustainability">Sustainability</h3>
+                    <p data-i18n="sustainabilityDesc">Minimizing our carbon footprint through eco-friendly packaging and
+                        responsible manufacturing.</p>
+                </div>
+                <!-- Card 2 -->
+                <div class="resp-card">
+                    <div class="resp-icon">
+                        <i class="fas fa-hand-holding-heart"></i>
+                    </div>
+                    <h3 data-i18n="ethicalSourcing">Ethical Sourcing</h3>
+                    <p data-i18n="ethicalSourcingDesc">Harvesting marine algae sustainably to preserve ocean
+                        biodiversity for future generations.</p>
+                </div>
+                <!-- Card 3 -->
+                <div class="resp-card">
+                    <div class="resp-icon">
+                        <i class="fas fa-users"></i>
+                    </div>
+                    <h3 data-i18n="communitySupport">Community Support</h3>
+                    <p data-i18n="communitySupportDesc">Empowering estheticians with education and supporting fair trade
+                        practices globally.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Certifications (Existing) -->
     <section class="about-certifications">
         <div class="container">
             <div class="certifications-content">
