--- a/peeling-powder.html
+++ b/peeling-powder.html
@@ -131,6 +131,70 @@
         </div>
     </section>
 
+    <!-- Skin Concerns Treated -->
+    <section class="product-concerns">
+        <div class="container">
+            <h3><i class="fas fa-magic"></i> <span data-i18n="concernsTreated">Skin Concerns Treated</span></h3>
+            <div class="concerns-chips">
+                <a href="skin-concerns.html" class="concern-chip">
+                    <i class="fas fa-sun"></i>
+                    <span data-i18n="concernHyperpigmentation">Hyperpigmentation</span>
+                </a>
+                <a href="skin-concerns.html" class="concern-chip">
+                    <i class="fas fa-disease"></i>
+                    <span data-i18n="concernAcne">Acne-Prone Skin</span>
+                </a>
+                <a href="skin-concerns.html" class="concern-chip">
+                    <i class="fas fa-bandage"></i>
+                    <span data-i18n="concernScars">Scars</span>
+                </a>
+                <a href="skin-concerns.html" class="concern-chip">
+                    <i class="fas fa-water"></i>
+                    <span data-i18n="concernWrinkles">Fine Lines & Wrinkles</span>
+                </a>
+                <a href="skin-concerns.html" class="concern-chip">
+                    <i class="fas fa-border-all"></i>
+                    <span data-i18n="concernPores">Enlarged Pores</span>
+                </a>
+                <a href="skin-concerns.html" class="concern-chip">
+                    <i class="fas fa-moon"></i>
+                    <span data-i18n="concernDull">Dull Complexion</span>
+                </a>
+            </div>
+            <a href="skin-concerns.html" class="btn btn-outline" data-i18n="viewAllConcerns">View All Skin Concerns</a>
+        </div>
+    </section>
+
+    <!-- Scientific Ingredients -->
+    <section class="scientific-section">
+        <div class="container">
+            <h3><i class="fas fa-flask"></i> <span data-i18n="scientificFormula">Scientific Formula</span></h3>
+            <div class="scientific-grid">
+                <div class="scientific-item">
+                    <div class="sci-icon"><i class="fas fa-leaf"></i></div>
+                    <h4 data-i18n="ingChlorophyll">Chlorophyll</h4>
+                    <p data-i18n="chlorophyllBrief">UV protection & anti-aging</p>
+                </div>
+                <div class="scientific-item">
+                    <div class="sci-icon"><i class="fas fa-tint"></i></div>
+                    <h4 data-i18n="ingPolysaccharide">Polysaccharides</h4>
+                    <p data-i18n="polysaccharideBrief">Deep hydration & barrier</p>
+                </div>
+                <div class="scientific-item">
+                    <div class="sci-icon"><i class="fas fa-dna"></i></div>
+                    <h4 data-i18n="ingAminoAcids">Amino Acids</h4>
+                    <p data-i18n="aminoAcidsBrief">Collagen boost & repair</p>
+                </div>
+                <div class="scientific-item">
+                    <div class="sci-icon"><i class="fas fa-shield-alt"></i></div>
+                    <h4 data-i18n="ingCarotenoids">Carotenoids</h4>
+                    <p data-i18n="carotenoidsBrief">Antioxidant protection</p>
+                </div>
+            </div>
+            <a href="ingredients.html" class="btn btn-outline" data-i18n="viewAllIngredients">View All Ingredients</a>
+        </div>
+    </section>
+
     <!-- Footer Component -->
     <div id="footer-component"></div>
 
