--- a/calming-mask.html
+++ b/calming-mask.html
@@ -128,6 +128,33 @@
         </div>
     </section>
 
+    <!-- Featured Ingredients -->
+    <section class="scientific-section">
+        <div class="container">
+            <h3><i class="fas fa-hand-holding-heart"></i> <span data-i18n="featuredIngredients">Featured
+                    Ingredients</span></h3>
+            <div class="scientific-grid">
+                <div class="scientific-item">
+                    <div class="sci-icon"><i class="fas fa-lemon"></i></div>
+                    <h4 data-i18n="ingCucumber">Cucumber Extract</h4>
+                    <p data-i18n="ingCucumberDesc">Rich in vitamins and minerals. Hydrates, refreshes, and reduces
+                        puffiness.</p>
+                </div>
+                <div class="scientific-item">
+                    <div class="sci-icon"><i class="fas fa-hand-holding-heart"></i></div>
+                    <h4 data-i18n="ingAloe">Aloe Vera</h4>
+                    <p data-i18n="ingAloeDesc">Calms inflammation, moisturizes, and promotes skin healing.</p>
+                </div>
+                <div class="scientific-item">
+                    <div class="sci-icon"><i class="fas fa-gem"></i></div>
+                    <h4 data-i18n="ingHyaluronate">Sodium Hyaluronate</h4>
+                    <p data-i18n="ingHyaluronateDesc">Deeply hydrates, locks in moisture, enhances elasticity.</p>
+                </div>
+            </div>
+            <a href="ingredients.html" class="btn btn-outline" data-i18n="viewAllIngredients">View All Ingredients</a>
+        </div>
+    </section>
+
     <!-- Footer Component -->
     <div id="footer-component"></div>
 
