--- a/sunscreen.html
+++ b/sunscreen.html
@@ -129,6 +129,57 @@
         </div>
     </section>
 
+    <!-- Why Sunscreen After Peeling -->
+    <section class="product-concerns">
+        <div class="container">
+            <h3><i class="fas fa-exclamation-triangle"></i> <span data-i18n="whySunscreen">Why Sunscreen After
+                    Peeling?</span></h3>
+            <div class="concerns-chips">
+                <div class="concern-chip" style="cursor: default;">
+                    <i class="fas fa-shield-alt"></i>
+                    <span data-i18n="protectNewSkin">Protect new skin cells</span>
+                </div>
+                <div class="concern-chip" style="cursor: default;">
+                    <i class="fas fa-ban"></i>
+                    <span data-i18n="preventPigment">Prevent pigmentation</span>
+                </div>
+                <div class="concern-chip" style="cursor: default;">
+                    <i class="fas fa-check-circle"></i>
+                    <span data-i18n="maintainResults">Maintain treatment results</span>
+                </div>
+                <div class="concern-chip" style="cursor: default;">
+                    <i class="fas fa-clock"></i>
+                    <span data-i18n="dailyEssential">Daily essential</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Featured Ingredients -->
+    <section class="scientific-section">
+        <div class="container">
+            <h3><i class="fas fa-flask"></i> <span data-i18n="featuredIngredients">Featured Ingredients</span></h3>
+            <div class="scientific-grid">
+                <div class="scientific-item">
+                    <div class="sci-icon"><i class="fas fa-star"></i></div>
+                    <h4 data-i18n="ingArbutin">Arbutin</h4>
+                    <p data-i18n="ingArbutinDesc">Brightens skin and inhibits melanin production for even skin tone.</p>
+                </div>
+                <div class="scientific-item">
+                    <div class="sci-icon"><i class="fas fa-seedling"></i></div>
+                    <h4 data-i18n="ingVitaminE">Vitamin E</h4>
+                    <p data-i18n="ingVitaminEDesc">Powerful antioxidant that protects against free radicals.</p>
+                </div>
+                <div class="scientific-item">
+                    <div class="sci-icon"><i class="fas fa-leaf"></i></div>
+                    <h4 data-i18n="ingCassia">Cassia Alata</h4>
+                    <p data-i18n="ingCassiaDesc">Anti-inflammatory and antifungal properties for skin health.</p>
+                </div>
+            </div>
+            <a href="ingredients.html" class="btn btn-outline" data-i18n="viewAllIngredients">View All Ingredients</a>
+        </div>
+    </section>
+
     <!-- Footer Component -->
     <div id="footer-component"></div>
 
