--- a/support-solution.html
+++ b/support-solution.html
@@ -131,6 +131,27 @@
         </div>
     </section>
 
+    <!-- Featured Ingredient: Daisy Flower -->
+    <section class="scientific-section">
+        <div class="container">
+            <h3><i class="fas fa-star"></i> <span data-i18n="featuredIngredient">Featured Ingredient</span></h3>
+            <div class="scientific-grid">
+                <div class="scientific-item">
+                    <div class="sci-icon"><i class="fas fa-star"></i></div>
+                    <h4 data-i18n="ingDaisy">Daisy Flower Extract</h4>
+                    <p data-i18n="ingDaisyDesc">Reduces dark spots and evens out skin tone while providing antiseptic
+                        protection.</p>
+                </div>
+                <div class="scientific-item">
+                    <div class="sci-icon"><i class="fas fa-droplet"></i></div>
+                    <h4 data-i18n="ingGlycerin">Glycerin</h4>
+                    <p data-i18n="ingGlycerinDesc">A humectant that deeply hydrates and softens the skin.</p>
+                </div>
+            </div>
+            <a href="ingredients.html" class="btn btn-outline" data-i18n="viewAllIngredients">View All Ingredients</a>
+        </div>
+    </section>
+
     <!-- Footer Component -->
     <div id="footer-component"></div>
 
