--- a/ingredients.html
+++ b/ingredients.html
@@ -20,45 +20,134 @@
     <link rel="stylesheet" href="css/style.css">
 
     <style>
-        /* Ingredients Page Styles */
+        /* Ingredients Page - Enhanced Visual Design */
+
+        /* Floating Animation */
+        @keyframes float {
+
+            0%,
+            100% {
+                transform: translateY(0px);
+            }
+
+            50% {
+                transform: translateY(-10px);
+            }
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes shimmer {
+            0% {
+                background-position: -200% 0;
+            }
+
+            100% {
+                background-position: 200% 0;
+            }
+        }
+
+        @keyframes pulse {
+
+            0%,
+            100% {
+                box-shadow: 0 0 0 0 rgba(143, 112, 128, 0.4);
+            }
+
+            50% {
+                box-shadow: 0 0 0 15px rgba(143, 112, 128, 0);
+            }
+        }
+
+        /* Hero Section - Premium Look */
         .ingredients-hero {
-            padding: 8rem 0 4rem;
-            background: linear-gradient(135deg, var(--cream) 0%, #E8E0E5 100%);
+            padding: 10rem 0 5rem;
+            background: linear-gradient(135deg, #f8f5f2 0%, #e8dfe5 50%, #d4c5cc 100%);
             text-align: center;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .ingredients-hero::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(circle, rgba(143, 112, 128, 0.1) 0%, transparent 50%);
+            animation: float 8s ease-in-out infinite;
+        }
+
+        .ingredients-hero::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: 100px;
+            background: linear-gradient(to top, var(--white), transparent);
         }
 
         .ingredients-hero h1 {
-            font-size: 3rem;
-            margin-bottom: 1rem;
+            font-size: 3.5rem;
+            margin-bottom: 1.5rem;
+            position: relative;
+            z-index: 1;
+            animation: fadeInUp 0.8s ease-out;
         }
 
         .ingredients-hero h1 span {
             color: var(--primary);
+            background: linear-gradient(135deg, var(--primary) 0%, var(--primary-dark) 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .ingredients-hero p {
-            font-size: 1.2rem;
+            font-size: 1.25rem;
             color: var(--text-light);
-            max-width: 600px;
+            max-width: 650px;
             margin: 0 auto;
+            position: relative;
+            z-index: 1;
+            animation: fadeInUp 0.8s ease-out 0.2s both;
         }
 
+        /* Section Styling */
         .ingredients-section {
-            padding: 4rem 0;
+            padding: 5rem 0;
+            position: relative;
         }
 
         .ingredients-section:nth-child(even) {
-            background: var(--light-gray);
+            background: linear-gradient(180deg, #faf8f6 0%, #f5f0ed 100%);
         }
 
+        .ingredients-section:nth-child(odd) {
+            background: var(--white);
+        }
+
+        /* Category Headers */
         .ingredients-category {
             text-align: center;
-            margin-bottom: 3rem;
+            margin-bottom: 3.5rem;
         }
 
         .ingredients-category h2 {
-            font-size: 2rem;
-            margin-bottom: 0.5rem;
+            font-size: 2.25rem;
+            margin-bottom: 0.75rem;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -67,65 +156,137 @@
 
         .ingredients-category h2 i {
             color: var(--primary);
+            font-size: 1.75rem;
+            animation: float 3s ease-in-out infinite;
         }
 
         .ingredients-category p {
             color: var(--text-light);
-            max-width: 500px;
+            max-width: 550px;
             margin: 0 auto;
+            font-size: 1.1rem;
         }
 
+        /* Cards Grid */
         .ingredients-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
             gap: 2rem;
         }
 
+        /* Ingredient Cards - Premium Design */
         .ingredient-card {
             background: var(--white);
-            border-radius: 20px;
+            border-radius: 24px;
             padding: 2rem;
-            box-shadow: var(--shadow);
-            transition: transform 0.3s, box-shadow 0.3s;
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.06);
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
             display: flex;
             gap: 1.5rem;
             align-items: flex-start;
+            position: relative;
+            overflow: hidden;
+            border: 1px solid rgba(143, 112, 128, 0.1);
+            animation: fadeInUp 0.6s ease-out both;
+        }
+
+        .ingredient-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 4px;
+            background: linear-gradient(90deg, var(--primary-light), var(--primary), var(--primary-light));
+            opacity: 0;
+            transition: opacity 0.3s;
         }
 
         .ingredient-card:hover {
-            transform: translateY(-5px);
-            box-shadow: var(--shadow-hover);
+            transform: translateY(-8px);
+            box-shadow: 0 25px 60px rgba(143, 112, 128, 0.2);
+            border-color: var(--primary-light);
         }
 
+        .ingredient-card:hover::before {
+            opacity: 1;
+        }
+
+        /* Staggered Animation for Cards */
+        .ingredient-card:nth-child(1) {
+            animation-delay: 0.1s;
+        }
+
+        .ingredient-card:nth-child(2) {
+            animation-delay: 0.2s;
+        }
+
+        .ingredient-card:nth-child(3) {
+            animation-delay: 0.3s;
+        }
+
+        .ingredient-card:nth-child(4) {
+            animation-delay: 0.4s;
+        }
+
+        /* Icon Design */
         .ingredient-icon {
-            width: 60px;
-            height: 60px;
-            min-width: 60px;
-            background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
-            border-radius: 15px;
+            width: 70px;
+            height: 70px;
+            min-width: 70px;
+            background: linear-gradient(135deg, var(--primary-light) 0%, var(--primary) 100%);
+            border-radius: 20px;
             display: flex;
             align-items: center;
             justify-content: center;
+            transition: all 0.4s ease;
+            position: relative;
+        }
+
+        .ingredient-icon::after {
+            content: '';
+            position: absolute;
+            inset: -3px;
+            border-radius: 22px;
+            background: linear-gradient(135deg, var(--primary-light), var(--primary));
+            z-index: -1;
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+
+        .ingredient-card:hover .ingredient-icon {
+            transform: scale(1.1) rotate(5deg);
+        }
+
+        .ingredient-card:hover .ingredient-icon::after {
+            opacity: 0.3;
         }
 
         .ingredient-icon i {
-            font-size: 1.5rem;
+            font-size: 1.75rem;
             color: var(--white);
         }
 
+        /* Content Styling */
         .ingredient-content h3 {
-            font-size: 1.2rem;
-            margin-bottom: 0.5rem;
+            font-size: 1.3rem;
+            margin-bottom: 0.6rem;
             color: var(--dark);
+            transition: color 0.3s;
+        }
+
+        .ingredient-card:hover .ingredient-content h3 {
+            color: var(--primary);
         }
 
         .ingredient-content p {
             color: var(--text-light);
             font-size: 0.95rem;
-            line-height: 1.6;
-            margin-bottom: 0.75rem;
+            line-height: 1.7;
+            margin-bottom: 1rem;
         }
 
+        /* Benefit Tags */
         .ingredient-benefits {
             display: flex;
             flex-wrap: wrap;
@@ -133,45 +294,95 @@
         }
 
         .ingredient-benefit {
-            background: var(--cream);
-            padding: 0.25rem 0.75rem;
-            border-radius: 20px;
+            background: linear-gradient(135deg, rgba(143, 112, 128, 0.1) 0%, rgba(143, 112, 128, 0.15) 100%);
+            padding: 0.35rem 0.9rem;
+            border-radius: 25px;
             font-size: 0.8rem;
             color: var(--primary);
-            font-weight: 500;
+            font-weight: 600;
+            border: 1px solid rgba(143, 112, 128, 0.2);
+            transition: all 0.3s;
         }
 
-        .philosophy-section {
-            padding: 4rem 0;
-            background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
+        .ingredient-benefit:hover {
+            background: var(--primary);
             color: var(--white);
+            transform: scale(1.05);
+        }
+
+        /* Philosophy Section - Premium Gradient */
+        .philosophy-section {
+            padding: 5rem 0;
+            background: linear-gradient(135deg, var(--primary) 0%, var(--primary-dark) 50%, #4a3a42 100%);
+            color: var(--white);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .philosophy-section::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.05'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
         }
 
         .philosophy-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
+            gap: 2.5rem;
             text-align: center;
+            position: relative;
+            z-index: 1;
         }
 
         .philosophy-item {
-            padding: 1.5rem;
+            padding: 2rem;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 20px;
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.15);
+            transition: all 0.4s ease;
+        }
+
+        .philosophy-item:hover {
+            transform: translateY(-10px);
+            background: rgba(255, 255, 255, 0.15);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
         }
 
         .philosophy-item i {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-            opacity: 0.9;
+            font-size: 3rem;
+            margin-bottom: 1.25rem;
+            display: block;
+            animation: float 4s ease-in-out infinite;
+        }
+
+        .philosophy-item:nth-child(2) i {
+            animation-delay: 0.5s;
+        }
+
+        .philosophy-item:nth-child(3) i {
+            animation-delay: 1s;
+        }
+
+        .philosophy-item:nth-child(4) i {
+            animation-delay: 1.5s;
         }
 
         .philosophy-item h3 {
-            font-size: 1.2rem;
-            margin-bottom: 0.5rem;
+            font-size: 1.3rem;
+            margin-bottom: 0.75rem;
+            color: var(--white);
         }
 
         .philosophy-item p {
             opacity: 0.9;
             font-size: 0.95rem;
+            line-height: 1.6;
+            color: rgba(255, 255, 255, 0.9);
         }
 
         /* RTL Support */
@@ -182,6 +393,32 @@
 
         [dir="rtl"] .ingredients-category h2 {
             flex-direction: row-reverse;
+        }
+
+        /* Responsive */
+        @media (max-width: 768px) {
+            .ingredients-hero h1 {
+                font-size: 2.5rem;
+            }
+
+            .ingredients-hero p {
+                font-size: 1.1rem;
+            }
+
+            .ingredient-card {
+                flex-direction: column;
+                text-align: center;
+                align-items: center;
+            }
+
+            [dir="rtl"] .ingredient-card {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .ingredient-benefits {
+                justify-content: center;
+            }
         }
     </style>
 </head>
